# AlgoTrading

./: Dockerfile  Makefile  pyproject.toml
.github/workflows/: ci.yml  deploy.yaml
algotrading/: app.py
tests/: test_app.py
